--- a/index.html
+++ b/index.html
@@ -109,11 +109,11 @@
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
-              <img src="http://placekitten.com/g/600/600" alt="...">
+              <img src="static/IMG_7768.JPG" alt="...">
               <div class="caption">
-                <h3>Your Name Here </h3>
-                <p>Some description</p>
-                <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+                <h3>Nir Shub</h3>
+                <p>Hackita Rules</p>
+                <p><a href="www.linkedin.com/pub/nir-shub/" class="btn btn-primary" role="button">LinkedIn</a> <a href="http://www.facebook.com/nir.shub" class="btn btn-default" role="button">Facebook</a></p>
               </div>
             </div>
           </div>
