changed picture size

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           </div>
           <div class="col-sm-6 col-md-3">
             <div class="thumbnail">
-              <img src="static/IMG_7768.JPG" alt="...">
+              <img src="static/IMG_7768.JPG" style="height:250px; alt="...">
               <div class="caption">
                 <h3>Nir Shub</h3>
                 <p>Hackita Rules</p>
